# ai-llm-sandbox

./: README.md
gpt-researcher/: quickstart.md
langchain/quickstart/: composing-with-lcel.py  llm--chat-model.py  output-parsers.py  prompt-templates-1.py  prompt-templates-2.py  serving-with-langserve-client.py  serving-with-langserve-server.py
llama_index/getting_started/starter_example/: requirements.txt  starter.py
openai/embeddings/: requirements.txt
openai/embeddings/utils/: embeddings_utils.py
openai/fine-tuning/: README.md  mydata.jsonl
openai/text-generation/: chat-completions-api.py  json-mode.py
sample/finance-researcher/: main.py  pyproject.toml
sample/finance-researcher/routers/: duckduckgo_search.py
