[tool.poetry]
name = "finance-researcher"
version = "0.1.0"
description = ""
authors = ["Tadashi Shigeoka <shigeoka@codenote.net>"]
license = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.3"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
